--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
@@ -48,8 +50,8 @@
                         <div class="topbar-info d-flex flex-wrap">
                             <a href="mailto:balajitourandtaxi@gmail.com" class="text-light me-4"><i
                                     class="fas fa-envelope text-white me-2"></i>balajitourandtaxi@gmail.com</a>
-                            <a href="tel:9680794434" class="text-light"><i
-                                    class="fas fa-phone-alt text-white me-2"></i>+91 9680794434</a>
+                            <a href="tel:8529794434" class="text-light"><i
+                                    class="fas fa-phone-alt text-white me-2"></i>+91 8529794434</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -80,7 +82,7 @@
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-xl-0" style="margin-left: 15px;">
-                        <a href="https://wa.me/9680794434"
+                        <a href="https://wa.me/8529794434"
                             class="btn-hover-bg btn btn-primary text-white py-2 px-4 me-3">Whatsapp
                             Now</a>
                     </div>
@@ -121,6 +123,21 @@
         </div>
     </div>
     <!-- Carousel End -->
+
+    <!-- animated text  -->
+    <div class="animated">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Balaji Taxi Service Jaipur To&nbsp;<span class="txt-rotate" data-period="2000"
+                            data-rotate='["Udaipur", "Manali", "Ajmer", "Uttrakhand", "Jaisalmer","Varindavan" ]'></span>
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end  -->
+
 
     <!-- About Start -->
     <div class="container-fluid about  py-5">
@@ -248,16 +265,16 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
-                        <img src="images/fortuner.png" class="img-fluid w-100" alt="Image">
+                        <img src="images/ertiga.jpg" class="img-fluid w-100" alt="Image">
                         <div class="service-link">
-                            <a href="#" class="h4 mb-0">Fortuner</a>
+                            <a href="#" class="h4 mb-0">Ertiga</a>
                         </div>
                     </div>
-                    <p class="my-4">Embark on your journey with unmatched comfort and reliability aboard our fleet of
-                        Toyota Fortuners at Balaji Tour & Taxi Service. The Fortuner's robust yet refined design ensures
-                        a smooth ride through every terrain .
+                    <p class="my-4">Book your Ertiga with ease through Balaji Tour & Taxi Service. Enjoy spacious
+                        comfort and reliability on your journeys with our convenient booking process and competitive
+                        rates. Contact us today to reserve your Ertiga and experience seamless travel
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Contact Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Contact Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -270,7 +287,7 @@
                         available exclusively at Balaji Tour & Taxi Service. Whether you're planning a family getaway or
                         a corporate outing, our fleet of Innova Crystas promises a premium travel experience .
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Contact Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Contact Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -284,7 +301,7 @@
                         seamless blend of sophistication and practicality
                     </p>
 
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Contact Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Contact Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -297,7 +314,7 @@
                         outings, or group excursions, the Traveller ensures everyone travels in comfort and style. With
                         its expansive interior and flexible seating configurations
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Contact Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Contact Now</a>
                 </div>
                 <div class="col-12">
                     <div class="ReadMore-Div">
@@ -530,7 +547,7 @@
                             Experience the pinnacle of luxury travel with Balaji Tour & Taxi Services' Audi car booking
                             service. </p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -545,7 +562,7 @@
                         <p class="mb-4">Elevate your travel experience to new heights of luxury with Balaji Tour & Taxi
                             Services' BMW booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -561,7 +578,7 @@
                             Experience the rugged charm and adventurous spirit of Rajasthan with Balaji Tour & Taxi
                             Services' Mahindra Thar booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -577,7 +594,7 @@
                             Discover the epitome of power, comfort, and versatility with Balaji Tour & Taxi Services'
                             Ford Endeavour booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -593,7 +610,7 @@
                             Experience the perfect blend of ruggedness and refinement with Balaji Tour & Taxi Services'
                             Tata Safari booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
             </div>
@@ -704,7 +721,7 @@
                         <p class="mb-4">we believe that every journey should be an experience worth cherishing.
                             Established with a passion for providing exceptional travel services</p>
                         <div class="position-relative mx-auto">
-                            <a href="tel:9680794434" class="btn btn-warning">Call Now</a>
+                            <a href="tel:8529794434" class="btn btn-warning">Call Now</a>
                         </div>
                     </div>
                 </div>
@@ -733,7 +750,7 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="mb-4 text-white">Contact us</h4>
-                        <a href="tel:9680794434"><i class="fas fa-angle-right me-2"></i> +91 9680794434</a>
+                        <a href="tel:8529794434"><i class="fas fa-angle-right me-2"></i> +91 8529794434</a>
                         <a href="mailto:balajitourandtaxi@gmail.com"><i class="fas fa-angle-right me-2"></i>
                             balajitourandtaxi@gmail.com</a>
                         <a href=""><i class="fas fa-angle-right me-2"></i> Mansarovar , Jaipur , Rajasthan</a>
@@ -774,6 +791,20 @@
         </div>
     </div>
 
+
+
+    <!-- contact icons  -->
+    <div class="callWhatsappdiv">
+       <a href="tel:8529794434"> <i class="bi bi-telephone"></i></a>
+       <a href="https://wa.me/8529794434"> <i class="bi bi-whatsapp"></i></a>
+    </div>
+
+    <div class="contactIcon">
+        <i class="bi bi-x"></i>
+    </div>
+    <!-- end  -->
+
+
     <a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i
             class="fa fa-arrow-up"></i></a>
 
@@ -788,8 +819,73 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
 
 
+
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script>
+        var TxtRotate = function (el, toRotate, period) {
+            this.toRotate = toRotate;
+            this.el = el;
+            this.loopNum = 0;
+            this.period = parseInt(period, 10) || 2000;
+            this.txt = '';
+            this.tick();
+            this.isDeleting = false;
+        };
+
+        TxtRotate.prototype.tick = function () {
+            var i = this.loopNum % this.toRotate.length;
+            var fullTxt = this.toRotate[i];
+
+            if (this.isDeleting) {
+                this.txt = fullTxt.substring(0, this.txt.length - 1);
+            } else {
+                this.txt = fullTxt.substring(0, this.txt.length + 1);
+            }
+
+            this.el.innerHTML = '<span class="wrap">' + this.txt + '</span>';
+
+            var that = this;
+            var delta = 300 - Math.random() * 100;
+
+            if (this.isDeleting) { delta /= 2; }
+
+            if (!this.isDeleting && this.txt === fullTxt) {
+                delta = this.period;
+                this.isDeleting = true;
+            } else if (this.isDeleting && this.txt === '') {
+                this.isDeleting = false;
+                this.loopNum++;
+                delta = 500;
+            }
+
+            setTimeout(function () {
+                that.tick();
+            }, delta);
+        };
+
+        window.onload = function () {
+            var elements = document.getElementsByClassName('txt-rotate');
+            for (var i = 0; i < elements.length; i++) {
+                var toRotate = elements[i].getAttribute('data-rotate');
+                var period = elements[i].getAttribute('data-period');
+                if (toRotate) {
+                    new TxtRotate(elements[i], JSON.parse(toRotate), period);
+                }
+            }
+            // INJECT CSS
+            var css = document.createElement("style");
+            css.type = "text/css";
+            css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
+            document.body.appendChild(css);
+        };
+    </script>
+    <script>
+        $(".contactIcon").click(function () {
+            $(".callWhatsappdiv").hide();
+        })
+    </script>
 
 </body>
 
