--- a/service.html
+++ b/service.html
@@ -48,8 +48,8 @@
                         <div class="topbar-info d-flex flex-wrap">
                             <a href="mailto:balajitourandtaxi@gmail.com" class="text-light me-4"><i
                                     class="fas fa-envelope text-white me-2"></i>balajitourandtaxi@gmail.com</a>
-                            <a href="tel:9680794434" class="text-light"><i
-                                    class="fas fa-phone-alt text-white me-2"></i>+91 9680794434</a>
+                            <a href="tel:8529794434" class="text-light"><i
+                                    class="fas fa-phone-alt text-white me-2"></i>+91 8529794434</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -80,7 +80,7 @@
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-xl-0" style="margin-left: 15px;">
-                        <a href="https://wa.me/9680794434"
+                        <a href="https://wa.me/8529794434"
                             class="btn-hover-bg btn btn-primary text-white py-2 px-4 me-3">Whatsapp
                             Now</a>
                     </div>
@@ -309,17 +309,16 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
-                        <img src="images/fortuner.png" class="img-fluid w-100" alt="Image">
+                        <img src="images/ertiga.jpg" class="img-fluid w-100" alt="Image">
                         <div class="service-link">
-                            <a href="#" class="h4 mb-0">Fortuner</a>
+                            <a href="#" class="h4 mb-0">Ertiga</a>
                         </div>
                     </div>
-                    <p class="my-4">Embark on your journey with unmatched comfort and reliability aboard our fleet of
-                        Toyota Fortuners at Balaji Tour &amp; Taxi Service. The Fortuner's robust yet refined design
-                        ensures
-                        a smooth ride through every terrain .
+                    <p class="my-4">Book your Ertiga with ease through Balaji Tour & Taxi Service. Enjoy spacious
+                        comfort and reliability on your journeys with our convenient booking process and competitive
+                        rates.
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -333,7 +332,7 @@
                         getaway or
                         a corporate outing, our fleet of Innova Crystas promises a premium travel experience .
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -348,7 +347,7 @@
                         seamless blend of sophistication and practicality
                     </p>
 
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -361,7 +360,7 @@
                         outings, or group excursions, the Traveller ensures everyone travels in comfort and style. With
                         its expansive interior and flexible seating configurations
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -373,7 +372,7 @@
                     <p class="my-4">Indulge in the ultimate travel experience with the Cruiser from Balaji Tour & Taxi
                         Service. Whether you're planning an off-road adventure or a leisurely countryside tour
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -385,7 +384,7 @@
                     <p class="my-4">Elevate your travel experience with the Hyundai Venue from Balaji Tour & Taxi
                         Service. Whether you're embarking on a city tour or a countryside adventure
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
@@ -397,19 +396,20 @@
                     <p class="my-4">Make your travel experience unforgettable with the Maruti Baleno from Balaji Tour &
                         Taxi Service. Whether you're exploring the city or venturing out on a scenic tour
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="service-item">
-                        <img src="images/etios.avif" class="img-fluid w-100" alt="Image">
+                        <img src="images/ertiga.jpg" class="img-fluid w-100" alt="Image">
                         <div class="service-link">
-                            <a href="#" class="h4 mb-0">Toyota Etios </a>
+                            <a href="#" class="h4 mb-0">Ertiga </a>
                         </div>
                     </div>
-                    <p class="my-4">The Etios offers a smooth and enjoyable ride for you and your fellow travelers. With
-                        ample legroom, modern amenities, and sleek design
+                    <p class="my-4">Experience comfort and reliability with our Ertiga booking service at Balaji Tour &
+                        Taxi Service. Whether you're planning a leisurely trip or a business outing, our spacious and
+                        well-maintained Ertiga ensures a smooth journey
                     </p>
-                    <a href="https://wa.me/9680794434" class="btn btn-warning">Book Now</a>
+                    <a href="https://wa.me/8529794434" class="btn btn-warning">Book Now</a>
                 </div>
             </div>
         </div>
@@ -440,7 +440,7 @@
                             Experience the rugged charm and adventurous spirit of Rajasthan with Balaji Tour & Taxi
                             Services' Mahindra Thar booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -456,7 +456,7 @@
                             Discover the epitome of power, comfort, and versatility with Balaji Tour & Taxi Services'
                             Ford Endeavour booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -472,7 +472,7 @@
                             Experience the perfect blend of ruggedness and refinement with Balaji Tour & Taxi Services'
                             Tata Safari booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -488,7 +488,7 @@
                             Experience the pinnacle of luxury travel with Balaji Tour & Taxi Services' Audi car booking
                             service. </p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
                 <div class="event-item">
@@ -503,7 +503,7 @@
                         <p class="mb-4">Elevate your travel experience to new heights of luxury with Balaji Tour & Taxi
                             Services' BMW booking service</p>
                         <a class="btn-hover-bg btn btn-primary text-white py-2 px-4"
-                            href="https://wa.me/9680794434">Book Now</a>
+                            href="https://wa.me/8529794434">Book Now</a>
                     </div>
                 </div>
             </div>
@@ -522,7 +522,7 @@
                         <p class="mb-4">we believe that every journey should be an experience worth cherishing.
                             Established with a passion for providing exceptional travel services</p>
                         <div class="position-relative mx-auto">
-                            <a href="tel:9680794434" class="btn btn-warning">Call Now</a>
+                            <a href="tel:8529794434" class="btn btn-warning">Call Now</a>
                         </div>
                     </div>
                 </div>
@@ -551,7 +551,7 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="mb-4 text-white">Contact us</h4>
-                        <a href="tel:9680794434"><i class="fas fa-angle-right me-2"></i> +91 9680794434</a>
+                        <a href="tel:8529794434"><i class="fas fa-angle-right me-2"></i> +91 8529794434</a>
                         <a href="mailto:balajitourandtaxi@gmail.com"><i class="fas fa-angle-right me-2"></i>
                             balajitourandtaxi@gmail.com</a>
                         <a href=""><i class="fas fa-angle-right me-2"></i> Mansarovar , Jaipur , Rajasthan</a>
