--- a/jaipur-to-agra.html
+++ b/jaipur-to-agra.html
@@ -26,6 +26,17 @@
 
 
     <link href="css/style.css" rel="stylesheet">
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TC8LSSXNML"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TC8LSSXNML');
+</script>
+
 </head>
 
 <body>
@@ -275,6 +286,8 @@
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Our Services</a>
                         <a href="gallery.html"><i class="fas fa-angle-right me-2"></i> Gallery</a>
                         <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contact</a>
+                        <a href="terms-and-conditions.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
+                        <a href="privacy-policy.html"><i class="fas fa-angle-right me-2"></i> Privacy Policy</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
@@ -324,8 +337,8 @@
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-md-4 text-center text-md-end text-body">
-                    Designed By <a class="border-bottom" href="http://thedigitcode.in/">Thedigitcode.in </a>
+                 <div class="col-md-4 text-center text-md-end text-body">
+                    Designed By <a class="border-bottom" href="https://infracode.in/" target="_blank">infraCode.in </a>
                 </div>
             </div>
         </div>
